Add POST `/api/penalty`
issue #56
